testing policies/mutate/patchStrategicMerge/1Rule_1Resource/ClusterPolicy&Policy/1Policy_2Rule/patch.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
  labels:
    foo: bar
    color: orange
  namespace: practice
spec:
  containers:
  - name: nginx
    image: nginx:latest
  dnsConfig:
    options:
    - name: ndots
      value: "1"
