testing policies/mutate/patchStrategicMerge/1Rule_1Resource/ClusterPolicy&Policy/1Policy_2Rule/patch4.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx
  name: mydeploy
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
        color: orange
    spec:
      containers:
      - image: nginx:1.14.2
        name: nginx
        ports:
        - containerPort: 80
      dnsConfig:
        options:
        - name: ndots
          value: "1"
