testing policies/mutate/patchStrategicMerge/1Rule_1Resource/ClusterPolicy&Policy/1Policy_2Rule/resource.yaml
# So resource == patchedResource then, go inside skip block and then result = pass
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
  labels:
    foo: bar
    color: orange
  namespace: practice
spec:
  containers:
  - name: nginx
    image: nginx:latest
  dnsConfig:
    options:
    - name: ndots
      value: "1"

---
#  So result = pass
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
  labels:
    foo: bar
  namespace: testing
spec:
  containers:
  - name: nginx
    image: nginx:latest

---
#  So result = pass
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod-1
  labels:
    foo: bar
  namespace: practice
spec:
  containers:
  - name: nginx
    image: nginx:latest

---
# so result = fail
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod-2
  labels:
    foo: bar
  namespace: practice
spec:
  containers:
  - name: nginx
    image: nginx:latest

---
# Resource desc != rule description. So rule not applied. Go inside skip block.
# Check patched resource of user with engine
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydeploy
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
